--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(hw1_new
         #main.cpp
+        #test.cpp
         smash.cpp
         Commands.h
         Commands.cpp
